2005-12-08  Randolph Chung  <tausq@debian.org>

	* somread.c (som_symfile_offsets): Iterate through number of sections
	in addrs instead of objfile.

2005-12-07  Daniel Jacobowitz  <dan@codesourcery.com>

	* valops.c (value_struct_elt): Clarify error message.

2005-12-07  Jim Blandy  <jimb@redhat.com>

	* target.c (target_xfer_memory_partial): Doc fix.

	* ax-general.c (ax_reqs): Check stack heights for backward jumps,
	too.  Correctly check height at target.  Doc fixes.

2005-12-06  Michael Snyder  <msnyder@redhat.com>

	* cli/cli-decode.c (add_setshow_string_cmd): Indent.
	(add_setshow_integer_cmd): Indent.

	* inf-ptrace.c: Fix typos in comments.

2005-12-06  Serge Chatroux  <serge.chatroux@st.com>

	* mi/mi-interp.c (mi_interpreter_resume): Route target error
	through the MI.

2005-12-04  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c: Include "regcache.h" and "bsd-uthread.h".
	(amd64obsd_uthread_reg_offset): New variable.
	(AMD64OBSD_UTHREAD_RSP_OFFSET): New define.
	(amd64obsd_supply_uthread, amd64obsd_collect_uthread): New
	functions.
	(amd64obsd_init_abi): Set supply_uthread and collect_uthread.
	* Makefile.in (amd64obsd-tdep.o): Update dependencies.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* breakpoint.c (BREAK_ARGS_HELP): New mecro.
	(_initialize_breakpoint): Enhance break, tbreak, hbreak and thbreak
	commands' help by adding more information and using BREAK_ARGS_HELP
	to duplicate the common parts.  Remove now-redundant cross-references.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* value.c (init_if_undefined_command): New function.
	(_initialize_values): Add command init-if-undefined.
	* NEWS (Changes since GDB 6.3): Rename to 'Changes in GDB 6.4'.
	(Changes since GDB 6.4): New section.
	Mention new command init-if-undefined.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* symfile.c (symbol_file_clear): Test symfile_objfile is not NULL
	before dereferencing it.
	Gettextize the query.
