@@ -1,3 +1,12 @@
+2005-12-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	Add ms2 support.
+	* ms1-tdep.c (ms1_register_type): Check for ms2.
+	(ms1_breakpoint_from_pc): ms2 has a different break instruction.
+	(ms1_pseudo_register_read, ms1_pseudo_register_write,
+	ms1_registers_info): Add ms2.
+ 	* NEWS (Changes since GDB 6.4): Add ms2
+
 2005-12-08  Randolph Chung  <tausq@debian.org>
 
 	* somread.c (som_symfile_offsets): Iterate through number of sections
@@ -47,7 +56,7 @@
 
 	* value.c (init_if_undefined_command): New function.
 	(_initialize_values): Add command init-if-undefined.
-	* NEWS (Changes since GDB 6.3): Rename to 'Changes in GDB 6.4'.
+ 	* NEWS (Changes since GDB 6.3): Rename to 'Changes in GDB 6.4'.
 	(Changes since GDB 6.4): New section.
 	Mention new command init-if-undefined.
 
